# artificial_vision_final

./: .gitignore  README.md
cesar/neural_style/: neural_style_tutorial.ipynb  neural_style_tutorial_colab.ipynb  requirements.txt
cesar/neural_style/it-01/: params
cesar/neural_style/it-010/exp1/: params
cesar/neural_style/it-02/: params
cesar/neural_style/it-03/exp1/: params
cesar/neural_style/it-04/exp1/: params
cesar/neural_style/it-05/exp1/: params
cesar/neural_style/it-06/exp1/: params
cesar/neural_style/it-07/exp1/: params
cesar/neural_style/it-08/exp1/: params
cesar/neural_style/it-09/exp1/: params
cesar/neural_style/it-099/exp1/: params
jose/: .gitignore  Untitled.ipynb  neural_style.py  neural_style_notebook.ipynb  neural_style_tutorial.ipynb  pyproject.toml  test.py
neural_style/: .gitignore  Untitled.ipynb  neural_style.py  neural_style_tutorial.ipynb  neural_style_tutorial_colab.ipynb  pyproject.toml
neural_style/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  neural_style_tutorial_colab-checkpoint.ipynb
report/report-template/: report.tex
