[project]
name = "neural-style"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
